fix bench a bit